<resources>
    <string name="app_name">study06_ksj</string>
    <!--    STEP 1 string-->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <!--    STEP 2 string-->
    <string name="starbucs">starbucs logo</string>
    <string name="details_button">Show details</string>
    <string-array name="options">
        <item>Drinks</item>
        <item>Food</item>
        <item>Stores</item>
    </string-array>
    <!--    STEP 3 string-->
    <string name="workout_title">Title</string>
    <string name="workout_description">Description</string>
    <!--    STEP 4 string-->
    <string name="title_top">Top fragment</string>
    <string-array name="pizzas">
        <item>Diavolo</item>
        <item>Funghi</item>
    </string-array>
    <string-array name="pasta">
        <item>Spaghetti bolognese</item>
        <item>Lasagne</item>
    </string-array>
    <string-array name="stores">
        <item>Cambridge</item>
        <item>Sebastopol</item>
    </string-array>
    <string name="create_order">Create Order</string>
    <string name="action_share">Share</string>
    <string name="home_tab">Home</string>
    <string name="pizza_tab">Pizzas</string>
    <string name="pasta_tab">Pasta</string>
    <string name="store_tab">Stores</string>

    <string name="company_name">Bits and Pizzas</string>
    <string name="restaurant_image">Restaurant image</string>
    <string name="home_text">본문내용 아무내용이나 집어넣는 부분인거 같은데 이부분은 너무 많은 영문 있으니 아무말이나 적어야겠음
    이거 너무 노가다 작업 아닌가 싶을 정도로 뭐 2017년도에 지들이 만들었고 피자맛이 어떻고 아메리카에서 제일 잘나가는 이탈리아
    피집이라고 하네요</string>
    <string name="order_name_hint">이름을 입력</string>
    <string name="order_details_hints">주문을 입력</string>
    <string name="favorite">Favorite</string>

    <!--    Step 5 string-->
    <string name="question">웃긴썰 있어요 ?</string>
    <string name="response">지금!</string>
    <string name="app_name1">주행계</string>
    <string name="permission_denied">주소 권한 요청</string>


</resources>